k8s/route2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test1
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /test1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: docker-test1
            port:
              number: 80
      - path: /test2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: docker-test2
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: docker-test1
            port:
              number: 80
      - path: /report(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: test-reporting
            port:
              number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hello-world-ingress-static
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/rewrite-target: /static/$2
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /static(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: aks-helloworld-one
#             port: 
#               number: 80
