k8s/sslroutes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - test1.invasionfashion.co.ke
    - dockerhose.eastus.cloudapp.azure.com
    - report.invasionfashion.co.ke
    - test2.invasionfashion.co.ke
    secretName: tls-secret
  rules:
  - host: test1.invasionfashion.co.ke
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: docker-test1
            port:
              number: 80
  - host: test2.invasionfashion.co.ke
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: docker-test2
            port:
              number: 80
  - host: report.invasionfashion.co.ke
    http:
      paths:
      - path: /v1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: test-reporting
            port:
              number: 80
  - host: dockerhose.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: docker-test1
            port:
              number: 80  
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hello-world-ingress-static
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /static/$2
# spec:
#   ingressClassName: nginx
#   tls:
#   - hosts:
#     - test1.invasionfashion.co.ke
#     secretName: tls-secret
#   rules:
#   - host: hello-world-ingress.MY_CUSTOM_DOMAIN
#     http:
#       paths:
#       - path: /static(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: aks-helloworld-one
#             port: 
#               number: 80
